crates/zizmor/tests/integration/snapshots/integration__snapshot__cache_poisoning-17.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"cache-poisoning/issue-1152-repro.yml\")).run()?"
---
error[cache-poisoning]: runtime artifacts potentially vulnerable to a cache poisoning attack
  --> @@INPUT@@:16:9
   |
 5 | on: release
   | ----------- generally used when publishing artifacts generated at runtime
...
16 |         uses: actions/setup-node@v5
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^ cache enabled by default here
   |
   = note: audit confidence → Low

error[cache-poisoning]: runtime artifacts potentially vulnerable to a cache poisoning attack
  --> @@INPUT@@:21:9
   |
 5 |   on: release
   |   ----------- generally used when publishing artifacts generated at runtime
...
21 | /         with:
22 | |           package-manager-cache: true
   | |_____________________________________^ opt-in for caching here
   |
   = note: audit confidence → Low

2 findings: 0 unknown, 0 informational, 0 low, 0 medium, 2 high
